syntax = "proto3";

package benchmark;

option go_package = "github.com/LyrinoxTechnologies/ridged-proto/benchmark";

message LoginRequest {
  string username = 1;
  string password = 2;
  string client_id = 3;
}
